# keel

./: .env.example  .gitignore  ARCHITECTURE.md  Create Desktop Shortcut.vbs  KEEL_V1_BUILD_PACKAGE.md  KEEL_V1_MILESTONE_1.md  Keel.bat  Keel.command  LICENSE  PROJECT.md  README.md  RESEARCH_BETS.md  ROADMAP.md  THE_KEEL_PROGRAM.md  VISION.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DIRECTIONS.md  system-map.html  system-map.mmd
src/keel/: __init__.py  __main__.py  advisor.py  allocator.py  alpaca.py  app.py  backtest.py  brain.py  briefing.py  broker.py  catalysts.py  certify.py  cli.py  config.py  costs.py  data.py  decay.py  doctor.py  ensemble.py  env.py  indicators.py  journal.py  knowledge.py  llm.py  meta.py  overlay.py  portfolio.py  risk.py  riskbudget.py  roster.py  scanner.py  service.py  signals.py  stats.py  strategies.py  strategy.py  stress.py  synthesize.py  trader.py  training.py  (+3 more)
src/keel/intelligence/: __init__.py  authority.py  baseline.py  contracts.py  episode.py  policy.py  reasons.py  runtime.py  state_builder.py
src/keel/operations/: __init__.py  database.py  incidents.py  order_intent.py
tests/: conftest.py  fakes.py  intel_helpers.py  test_alpaca.py  test_app.py  test_backtest.py  test_brain.py  test_broker.py  test_cli.py  test_data.py  test_doctor.py  test_evolution.py  test_indicators.py  test_intelligence_authority.py  test_intelligence_baseline.py  test_intelligence_contracts.py  test_intelligence_runtime.py  test_journal_chain.py  test_meta_scanner.py  test_operations_persistence.py  test_overlay.py  test_portfolio.py  test_portfolio_ops.py  test_risk.py  test_service_intelligence.py  test_signals_ensemble.py  test_stats.py  test_synth_certify_briefing.py  test_trader.py  test_training.py  test_ui.py  test_universe.py  test_walkforward.py
