[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "keel"
version = "0.2.0"
description = "Honest autonomous trading machine: whole-market scan, per-moment strategy selection, walk-forward-gated edge, a Keel-only AI brain, and a qualitative veto limb — paper-only"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = ["numpy>=1.26"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]
desktop = ["pywebview>=5.0", "psutil>=5.9"]

[project.scripts]
keel = "keel.cli:main"

[project.gui-scripts]
keel-app = "keel.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint.per-file-ignores]
# ui.py embeds a self-contained HTML/CSS/JS page as a string literal; the web
# asset is intentionally not wrapped to the Python line length.
"src/keel/ui.py" = ["E501"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
